--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ https://templatemo.com/tm-505-stacked
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-theme.min.css" />
     <link rel="stylesheet" href="css/templatemo-style.css" />
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+<link rel="shortcut icon" href="./img/logo.jpg" type="image/x-icon">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
   </head>
   <body>
@@ -87,7 +88,7 @@ https://templatemo.com/tm-505-stacked
                           </div>
                         </div>
                         <div class="right-image">
-                          <img src="img/right-home-image.png" alt="" />
+                          <img src="img/right-home-image.jpg" alt="" style="border-radius: 50%;"/>
                         </div>
                       </div>
                     </div>
@@ -107,7 +108,7 @@ https://templatemo.com/tm-505-stacked
               <div class="col-md-8 col-md-offset-2">
                 <div class="about-content">
                   <div class="heading">
-                    <h4>About us</h4>
+                    <h4>About me</h4>
                   </div>
                   <div class="row">
                     <div class="col-md-12">
@@ -169,8 +170,7 @@ https://templatemo.com/tm-505-stacked
                         <div>
                           <div class="project-item">
                             <a
-                              href="img/project-item-01.jpg"
-                              data-lightbox="image-1"
+                              href="https://guess-me-a85b5.web.app/"
                               ><img
                                 src="https://github.com/primakurniawan/guess-me/raw/master/guess-me.png"
                                 alt=""
@@ -193,8 +193,7 @@ https://templatemo.com/tm-505-stacked
                         <div>
                           <div class="project-item">
                             <a
-                              href="img/project-item-02.jpg"
-                              data-lightbox="image-1"
+                              href="https://movies-app-23675.web.app/"
                               ><img
                                 src="https://github.com/primakurniawan/movie-app/raw/master/movies-app.png"
                                 alt=""
@@ -216,8 +215,7 @@ https://templatemo.com/tm-505-stacked
                         <div>
                           <div class="project-item">
                             <a
-                              href="img/project-item-02.jpg"
-                              data-lightbox="image-1"
+                              href="https://food-react-app.web.app/"
                               ><img
                                 src="https://github.com/primakurniawan/recipe-app/raw/master/food-react-app.png"
                                 alt=""
@@ -240,8 +238,7 @@ https://templatemo.com/tm-505-stacked
                         <div>
                           <div class="project-item">
                             <a
-                              href="img/project-item-04.jpg"
-                              data-lightbox="image-1"
+                              href="https://weather-app-a5806.web.app/"                            
                               ><img
                                 src="https://github.com/primakurniawan/weather-app/raw/master/weather-app.png"
                                 alt=""
@@ -256,63 +253,6 @@ https://templatemo.com/tm-505-stacked
                                 <a href="https://weather-app-a5806.web.app/"
                                   >Discover More</a
                                 >
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div>
-                          <div class="project-item">
-                            <a
-                              href="img/project-item-05.jpg"
-                              data-lightbox="image-1"
-                              ><img src="img/project-item-05.jpg" alt=""
-                            /></a>
-                            <div class="text-content">
-                              <h4>Artwork</h4>
-                              <p>
-                                Lorem ipsum dolor, adipis scing elit etiam ante
-                                vehicula, aliquam mauris in, luctus neque.
-                              </p>
-                              <div class="primary-button">
-                                <a href="#">Discover More</a>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div>
-                          <div class="project-item">
-                            <a
-                              href="img/project-item-06.jpg"
-                              data-lightbox="image-1"
-                              ><img src="img/project-item-06.jpg" alt=""
-                            /></a>
-                            <div class="text-content">
-                              <h4>Sixth Box</h4>
-                              <p>
-                                Lorem ipsum dolor, adipis scing elit etiam ante
-                                vehicula, aliquam mauris in, luctus neque.
-                              </p>
-                              <div class="primary-button">
-                                <a href="#">Discover More</a>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div>
-                          <div class="project-item">
-                            <a
-                              href="img/project-item-07.jpg"
-                              data-lightbox="image-1"
-                              ><img src="img/project-item-07.jpg" alt=""
-                            /></a>
-                            <div class="text-content">
-                              <h4>Item #7</h4>
-                              <p>
-                                Lorem ipsum dolor, adipis scing elit etiam ante
-                                vehicula, aliquam mauris in, luctus neque.
-                              </p>
-                              <div class="primary-button">
-                                <a href="#">Discover More</a>
                               </div>
                             </div>
                           </div>
@@ -335,69 +275,19 @@ https://templatemo.com/tm-505-stacked
               <div class="col-md-8 col-md-offset-2">
                 <div class="contact-content">
                   <div class="heading">
-                    <h4>Contact us</h4>
+                    <h4>Contact me</h4>
                   </div>
-                  <div class="row">
-                    <div class="col-md-8">
-                      <div class="contat-form">
-                        <form id="contact" action="" method="post">
-                          <fieldset>
-                            <input
-                              name="name"
-                              type="text"
-                              class="form-control"
-                              id="name"
-                              placeholder="Your Name"
-                              required=""
-                            />
-                          </fieldset>
-                          <fieldset>
-                            <input
-                              name="email"
-                              type="email"
-                              class="form-control"
-                              id="email"
-                              placeholder="Email"
-                              required=""
-                            />
-                          </fieldset>
-                          <fieldset>
-                            <textarea
-                              name="message"
-                              rows="6"
-                              class="form-control"
-                              id="message"
-                              placeholder="Message"
-                              required=""
-                            ></textarea>
-                          </fieldset>
-                          <fieldset>
-                            <button type="submit" id="form-submit" class="btn">
-                              Send Message
-                            </button>
-                          </fieldset>
-                        </form>
-                      </div>
-                    </div>
-                    <div class="col-md-4">
-                      <div class="more-info">
-                        <p>
-                          Nunc purus ligula, ullamcorper id velit id, vestibulum
-                          auc sapien. Sed quis mauris eget sem imperdiet
-                          rhoncus.<br /><br />
-                          <em
-                            >880 Etiam mauris erat, <br />Vestibulum eu augue
-                            nec, 10940</em
-                          >
-                        </p>
-                      </div>
+                  <div class="row text-center">
+                      <a  href="https://github.com/primakurniawan"><i class="fab fa-github fa-10x"></i></a>
+                      <a href="https://www.facebook.com/prima.kurniawan.370"><i class="fab fa-facebook fa-10x"></i></a>
+                      <a href="https://www.instagram.com/___prime/"><i class="fab fa-instagram fa-10x"></i></a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-md-12">
                 <div class="footer">
-                  <p>Copyright &copy; 2020 Your Company | Design: TemplateMo</p>
+                  <p>Copyright &copy; 2020 Prima Kurniawan</p>
                 </div>
               </div>
             </div>
